Fix for tooltip scroll offsets with element overflow
My original design only worked for window scrolling.  This revision
works for any scrolling and is more straight forward.

--- a/css/common.css
+++ b/css/common.css
@@ -264,6 +264,7 @@
                 }
             }
 
+            key,
             value {
                 font-variant-numeric: tabular-nums;
             }
